fix exit button on mobile

--- a/src/Pages/Exercise/Exercise.scss
+++ b/src/Pages/Exercise/Exercise.scss
@@ -128,6 +128,11 @@
     display: flex;
   }
 
+  .exit-button{
+    width: 5%;
+    margin-left: 20px;
+  }
+
   //Desktop Styling
   @media (min-width: 1050px) {
     .otd-text {
@@ -154,7 +159,6 @@
 
     .exit-button {
       width: 3%;
-      margin-left: 20px;
     }
 
     .grid-content > img {
@@ -238,6 +242,12 @@
 
     .category {
       font-size: 1rem;
+    }
+    .exit-button{
+      width: 10%;
+    }
+    .grid-content > img{
+      height: 95px;
     }
   }
 }
